src/ParGrammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.0 from ParGrammar.y
-----------------------------------------------------------------------------

state 44 contains 1 shift/reduce conflicts.
state 74 contains 1 shift/reduce conflicts and 1 reduce/reduce conflicts.
state 75 contains 1 shift/reduce conflicts.
state 126 contains 1 shift/reduce conflicts.
state 162 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListTopDef                              (4)
	TopDef -> Type Ident '(' ListArg ')' Block         (5)
	TopDef -> ClassHeader ClassBlock                   (6)
	ListTopDef -> TopDef                               (7)
	ListTopDef -> TopDef ListTopDef                    (8)
	Arg -> Type Ident                                  (9)
	ListArg ->                                         (10)
	ListArg -> Arg                                     (11)
	ListArg -> Arg ',' ListArg                         (12)
	LValue -> Ident                                    (13)
	LValue -> Ident '[' Expr ']'                       (14)
	LValue -> LValue1                                  (15)
	LValue2 -> LValue '.' LValue                       (16)
	LValue2 -> LValue3                                 (17)
	LValue1 -> LValue2                                 (18)
	LValue3 -> '(' LValue ')'                          (19)
	Block -> '{' ListStmt '}'                          (20)
	ListStmt ->                                        (21)
	ListStmt -> ListStmt Stmt                          (22)
	Stmt -> ';'                                        (23)
	Stmt -> Block                                      (24)
	Stmt -> Type ListItem ';'                          (25)
	Stmt -> LValue '=' Expr ';'                        (26)
	Stmt -> LValue '++' ';'                            (27)
	Stmt -> LValue '--' ';'                            (28)
	Stmt -> 'return' Expr ';'                          (29)
	Stmt -> 'return' ';'                               (30)
	Stmt -> 'if' '(' Expr ')' Stmt                     (31)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (32)
	Stmt -> 'while' '(' Expr ')' Stmt                  (33)
	Stmt -> 'for' '(' Type Ident ':' Ident ')' Stmt    (34)
	Stmt -> Expr ';'                                   (35)
	Item -> Ident                                      (36)
	Item -> Ident '=' Expr                             (37)
	ListItem -> Item                                   (38)
	ListItem -> Item ',' ListItem                      (39)
	Type -> Ident                                      (40)
	Type -> 'int'                                      (41)
	Type -> 'string'                                   (42)
	Type -> 'boolean'                                  (43)
	Type -> 'void'                                     (44)
	Type -> Type '[]'                                  (45)
	ClassHeader -> 'class' Ident                       (46)
	ClassHeader -> 'class' Ident 'extends' Ident       (47)
	ClassBlock -> '{' ListClassStmt '}'                (48)
	ListClassStmt ->                                   (49)
	ListClassStmt -> ListClassStmt ClassStmt           (50)
	ClassStmt -> Type ListItem ';'                     (51)
	ClassStmt -> Type Ident '(' ListArg ')' Block      (52)
	Expr6 -> LValue                                    (53)
	Expr6 -> 'new' Type                                (54)
	Expr6 -> 'new' Type '[' Expr ']'                   (55)
	Expr6 -> '(' Type ')' 'null'                       (56)
	Expr6 -> Integer                                   (57)
	Expr6 -> 'true'                                    (58)
	Expr6 -> 'false'                                   (59)
	Expr6 -> Ident '.' Ident '(' ListExpr ')'          (60)
	Expr6 -> Ident '.' 'length'                        (61)
	Expr6 -> String                                    (62)
	Expr6 -> Expr7                                     (63)
	Expr7 -> Ident '(' ListExpr ')'                    (64)
	Expr7 -> Expr8                                     (65)
	Expr5 -> '-' Expr6                                 (66)
	Expr5 -> '!' Expr6                                 (67)
	Expr5 -> Expr6                                     (68)
	Expr4 -> Expr4 MulOp Expr5                         (69)
	Expr4 -> Expr5                                     (70)
	Expr3 -> Expr3 AddOp Expr4                         (71)
	Expr3 -> Expr4                                     (72)
	Expr2 -> Expr2 RelOp Expr3                         (73)
	Expr2 -> Expr3                                     (74)
	Expr1 -> Expr2 '&&' Expr1                          (75)
	Expr1 -> Expr2                                     (76)
	Expr -> Expr1 '||' Expr                            (77)
	Expr -> Expr1                                      (78)
	Expr8 -> '(' Expr ')'                              (79)
	ListExpr ->                                        (80)
	ListExpr -> Expr                                   (81)
	ListExpr -> Expr ',' ListExpr                      (82)
	AddOp -> '+'                                       (83)
	AddOp -> '-'                                       (84)
	MulOp -> '*'                                       (85)
	MulOp -> '/'                                       (86)
	MulOp -> '%'                                       (87)
	RelOp -> '<'                                       (88)
	RelOp -> '<='                                      (89)
	RelOp -> '>'                                       (90)
	RelOp -> '>='                                      (91)
	RelOp -> '=='                                      (92)
	RelOp -> '!='                                      (93)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'--'           { PT _ (TS _ 12) }
	'.'            { PT _ (TS _ 13) }
	'/'            { PT _ (TS _ 14) }
	':'            { PT _ (TS _ 15) }
	';'            { PT _ (TS _ 16) }
	'<'            { PT _ (TS _ 17) }
	'<='           { PT _ (TS _ 18) }
	'='            { PT _ (TS _ 19) }
	'=='           { PT _ (TS _ 20) }
	'>'            { PT _ (TS _ 21) }
	'>='           { PT _ (TS _ 22) }
	'['            { PT _ (TS _ 23) }
	'[]'           { PT _ (TS _ 24) }
	']'            { PT _ (TS _ 25) }
	'boolean'      { PT _ (TS _ 26) }
	'class'        { PT _ (TS _ 27) }
	'else'         { PT _ (TS _ 28) }
	'extends'      { PT _ (TS _ 29) }
	'false'        { PT _ (TS _ 30) }
	'for'          { PT _ (TS _ 31) }
	'if'           { PT _ (TS _ 32) }
	'int'          { PT _ (TS _ 33) }
	'length'       { PT _ (TS _ 34) }
	'new'          { PT _ (TS _ 35) }
	'null'         { PT _ (TS _ 36) }
	'return'       { PT _ (TS _ 37) }
	'string'       { PT _ (TS _ 38) }
	'true'         { PT _ (TS _ 39) }
	'void'         { PT _ (TS _ 40) }
	'while'        { PT _ (TS _ 41) }
	'{'            { PT _ (TS _ 42) }
	'||'           { PT _ (TS _ 43) }
	'}'            { PT _ (TS _ 44) }
	L_ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	TopDef          rules 5, 6
	ListTopDef      rules 7, 8
	Arg             rule  9
	ListArg         rules 10, 11, 12
	LValue          rules 13, 14, 15
	LValue2         rules 16, 17
	LValue1         rule  18
	LValue3         rule  19
	Block           rule  20
	ListStmt        rules 21, 22
	Stmt            rules 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35
	Item            rules 36, 37
	ListItem        rules 38, 39
	Type            rules 40, 41, 42, 43, 44, 45
	ClassHeader     rules 46, 47
	ClassBlock      rule  48
	ListClassStmt   rules 49, 50
	ClassStmt       rules 51, 52
	Expr6           rules 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63
	Expr7           rules 64, 65
	Expr5           rules 66, 67, 68
	Expr4           rules 69, 70
	Expr3           rules 71, 72
	Expr2           rules 73, 74
	Expr1           rules 75, 76
	Expr            rules 77, 78
	Expr8           rule  79
	ListExpr        rules 80, 81, 82
	AddOp           rules 83, 84
	MulOp           rules 85, 86, 87
	RelOp           rules 88, 89, 90, 91, 92, 93

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'boolean'      shift, and enter state 9
	'class'        shift, and enter state 10
	'int'          shift, and enter state 11
	'string'       shift, and enter state 12
	'void'         shift, and enter state 13
	L_ident        shift, and enter state 2

	Ident          goto state 3
	Program        goto state 4
	TopDef         goto state 5
	ListTopDef     goto state 6
	Type           goto state 7
	ClassHeader    goto state 8

State 1


	L_ident        shift, and enter state 2


State 2

	Ident -> L_ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'.'            reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	'[]'           reduce using rule 1
	']'            reduce using rule 1
	'extends'      reduce using rule 1
	'{'            reduce using rule 1
	'||'           reduce using rule 1
	L_ident        reduce using rule 1


State 3

	Type -> Ident .                                     (rule 40)

	'!='           reduce using rule 40
	'%'            reduce using rule 40
	'&&'           reduce using rule 40
	')'            reduce using rule 40
	'*'            reduce using rule 40
	'+'            reduce using rule 40
	','            reduce using rule 40
	'-'            reduce using rule 40
	'/'            reduce using rule 40
	';'            reduce using rule 40
	'<'            reduce using rule 40
	'<='           reduce using rule 40
	'=='           reduce using rule 40
	'>'            reduce using rule 40
	'>='           reduce using rule 40
	'['            reduce using rule 40
	'[]'           reduce using rule 40
	']'            reduce using rule 40
	'||'           reduce using rule 40
	L_ident        reduce using rule 40


State 4

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 5

	ListTopDef -> TopDef .                              (rule 7)
	ListTopDef -> TopDef . ListTopDef                   (rule 8)

	'boolean'      shift, and enter state 9
	'class'        shift, and enter state 10
	'int'          shift, and enter state 11
	'string'       shift, and enter state 12
	'void'         shift, and enter state 13
	L_ident        shift, and enter state 2
	%eof           reduce using rule 7

	Ident          goto state 3
	TopDef         goto state 5
	ListTopDef     goto state 19
	Type           goto state 7
	ClassHeader    goto state 8

State 6

	Program -> ListTopDef .                             (rule 4)

	%eof           reduce using rule 4


State 7

	TopDef -> Type . Ident '(' ListArg ')' Block        (rule 5)
	Type -> Type . '[]'                                 (rule 45)

	'[]'           shift, and enter state 18
	L_ident        shift, and enter state 2

	Ident          goto state 17

State 8

	TopDef -> ClassHeader . ClassBlock                  (rule 6)

	'{'            shift, and enter state 16

	ClassBlock     goto state 15

State 9

	Type -> 'boolean' .                                 (rule 43)

	'!='           reduce using rule 43
	'%'            reduce using rule 43
	'&&'           reduce using rule 43
	')'            reduce using rule 43
	'*'            reduce using rule 43
	'+'            reduce using rule 43
	','            reduce using rule 43
	'-'            reduce using rule 43
	'/'            reduce using rule 43
	';'            reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'=='           reduce using rule 43
	'>'            reduce using rule 43
	'>='           reduce using rule 43
	'['            reduce using rule 43
	'[]'           reduce using rule 43
	']'            reduce using rule 43
	'||'           reduce using rule 43
	L_ident        reduce using rule 43


State 10

	ClassHeader -> 'class' . Ident                      (rule 46)
	ClassHeader -> 'class' . Ident 'extends' Ident      (rule 47)

	L_ident        shift, and enter state 2

	Ident          goto state 14

State 11

	Type -> 'int' .                                     (rule 41)

	'!='           reduce using rule 41
	'%'            reduce using rule 41
	'&&'           reduce using rule 41
	')'            reduce using rule 41
	'*'            reduce using rule 41
	'+'            reduce using rule 41
	','            reduce using rule 41
	'-'            reduce using rule 41
	'/'            reduce using rule 41
	';'            reduce using rule 41
	'<'            reduce using rule 41
	'<='           reduce using rule 41
	'=='           reduce using rule 41
	'>'            reduce using rule 41
	'>='           reduce using rule 41
	'['            reduce using rule 41
	'[]'           reduce using rule 41
	']'            reduce using rule 41
	'||'           reduce using rule 41
	L_ident        reduce using rule 41


State 12

	Type -> 'string' .                                  (rule 42)

	'!='           reduce using rule 42
	'%'            reduce using rule 42
	'&&'           reduce using rule 42
	')'            reduce using rule 42
	'*'            reduce using rule 42
	'+'            reduce using rule 42
	','            reduce using rule 42
	'-'            reduce using rule 42
	'/'            reduce using rule 42
	';'            reduce using rule 42
	'<'            reduce using rule 42
	'<='           reduce using rule 42
	'=='           reduce using rule 42
	'>'            reduce using rule 42
	'>='           reduce using rule 42
	'['            reduce using rule 42
	'[]'           reduce using rule 42
	']'            reduce using rule 42
	'||'           reduce using rule 42
	L_ident        reduce using rule 42


State 13

	Type -> 'void' .                                    (rule 44)

	'!='           reduce using rule 44
	'%'            reduce using rule 44
	'&&'           reduce using rule 44
	')'            reduce using rule 44
	'*'            reduce using rule 44
	'+'            reduce using rule 44
	','            reduce using rule 44
	'-'            reduce using rule 44
	'/'            reduce using rule 44
	';'            reduce using rule 44
	'<'            reduce using rule 44
	'<='           reduce using rule 44
	'=='           reduce using rule 44
	'>'            reduce using rule 44
	'>='           reduce using rule 44
	'['            reduce using rule 44
	'[]'           reduce using rule 44
	']'            reduce using rule 44
	'||'           reduce using rule 44
	L_ident        reduce using rule 44


State 14

	ClassHeader -> 'class' Ident .                      (rule 46)
	ClassHeader -> 'class' Ident . 'extends' Ident      (rule 47)

	'extends'      shift, and enter state 22
	'{'            reduce using rule 46


State 15

	TopDef -> ClassHeader ClassBlock .                  (rule 6)

	'boolean'      reduce using rule 6
	'class'        reduce using rule 6
	'int'          reduce using rule 6
	'string'       reduce using rule 6
	'void'         reduce using rule 6
	L_ident        reduce using rule 6
	%eof           reduce using rule 6


State 16

	ClassBlock -> '{' . ListClassStmt '}'               (rule 48)

	'boolean'      reduce using rule 49
	'int'          reduce using rule 49
	'string'       reduce using rule 49
	'void'         reduce using rule 49
	'}'            reduce using rule 49
	L_ident        reduce using rule 49

	ListClassStmt  goto state 21

State 17

	TopDef -> Type Ident . '(' ListArg ')' Block        (rule 5)

	'('            shift, and enter state 20


State 18

	Type -> Type '[]' .                                 (rule 45)

	'!='           reduce using rule 45
	'%'            reduce using rule 45
	'&&'           reduce using rule 45
	')'            reduce using rule 45
	'*'            reduce using rule 45
	'+'            reduce using rule 45
	','            reduce using rule 45
	'-'            reduce using rule 45
	'/'            reduce using rule 45
	';'            reduce using rule 45
	'<'            reduce using rule 45
	'<='           reduce using rule 45
	'=='           reduce using rule 45
	'>'            reduce using rule 45
	'>='           reduce using rule 45
	'['            reduce using rule 45
	'[]'           reduce using rule 45
	']'            reduce using rule 45
	'||'           reduce using rule 45
	L_ident        reduce using rule 45


State 19

	ListTopDef -> TopDef ListTopDef .                   (rule 8)

	%eof           reduce using rule 8


State 20

	TopDef -> Type Ident '(' . ListArg ')' Block        (rule 5)

	')'            reduce using rule 10
	'boolean'      shift, and enter state 9
	'int'          shift, and enter state 11
	'string'       shift, and enter state 12
	'void'         shift, and enter state 13
	L_ident        shift, and enter state 2

	Ident          goto state 3
	Arg            goto state 27
	ListArg        goto state 28
	Type           goto state 29

State 21

	ClassBlock -> '{' ListClassStmt . '}'               (rule 48)
	ListClassStmt -> ListClassStmt . ClassStmt          (rule 50)

	'boolean'      shift, and enter state 9
	'int'          shift, and enter state 11
	'string'       shift, and enter state 12
	'void'         shift, and enter state 13
	'}'            shift, and enter state 26
	L_ident        shift, and enter state 2

	Ident          goto state 3
	Type           goto state 24
	ClassStmt      goto state 25

State 22

	ClassHeader -> 'class' Ident 'extends' . Ident      (rule 47)

	L_ident        shift, and enter state 2

	Ident          goto state 23

State 23

	ClassHeader -> 'class' Ident 'extends' Ident .      (rule 47)

	'{'            reduce using rule 47


State 24

	Type -> Type . '[]'                                 (rule 45)
	ClassStmt -> Type . ListItem ';'                    (rule 51)
	ClassStmt -> Type . Ident '(' ListArg ')' Block     (rule 52)

	'[]'           shift, and enter state 18
	L_ident        shift, and enter state 2

	Ident          goto state 33
	Item           goto state 34
	ListItem       goto state 35

State 25

	ListClassStmt -> ListClassStmt ClassStmt .          (rule 50)
